SpringBoot配置文件 SpringBoot会自动识别下面这组配置文件application.properties/yml config/ application.properties/yml 如果是SpringCloud，还会自动识别下面这组配置文件:bootstrap.properties/yml config/ bootstrap.properties/yml (￣▽￣)／

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+
+#SpringBoot会自动识别下面这组配置文件application.properties/yml
+#config/ application.properties/yml
+#如果是SpringCloud，还会自动识别下面这组配置文件:bootstrap.properties/yml
+#config/ bootstrap.properties/yml
