--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+test.hello=~Hello~
+
 #SpringBoot会自动识别下面这组配置文件application.properties/yml
 #config/ application.properties/yml
 #如果是SpringCloud，还会自动识别下面这组配置文件:bootstrap.properties/yml
