集成热部署 (￣▽￣)／

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-test.hello=~Hello~
+test.hello=~Hello~!!!@@@%%##
 
 #SpringBoot会自动识别下面这组配置文件application.properties/yml
 #config/ application.properties/yml
