--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ test.hello=~Hello~!!!@@@%%##
 #config/ application.properties/yml
 #如果是SpringCloud，还会自动识别下面这组配置文件:bootstrap.properties/yml
 #config/ bootstrap.properties/yml
+
+# 增加数据库连接
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=gbk&serverTimezone=UTC
+spring.datasource.username=wiki
+spring.datasource.password=wiki
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 配置mybatis所有Mapper.xml所在的路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
