--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^3.0.0-alpha.14",
     "axios": "^0.21.0",
+    "highlight.js": "^11.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
