--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ test.hello=~Hello~!!!@@@%%##
 #config/ bootstrap.properties/yml
 
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=gbk&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=gbk&serverTimezone=UTC&allowMultiQueries=true
 spring.datasource.username=wiki
 spring.datasource.password=wiki
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
