--- a/web/.env.prod
+++ b/web/.env.prod
@@ -1,4 +1,4 @@
 NODE_ENV=production
-VUE_APP_SERVER=http://wiki-server.courseimooc.com
-VUE_APP_WS_SERVER=ws://wiki-server.courseimooc.com
+VUE_APP_SERVER=http://wiki-server.com
+VUE_APP_WS_SERVER=ws://wiki-server.com
 
